# obsidian-publish-confluence

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/obsidian_publish_confluence/: __init__.py  cli.py  convert.py  publish.py
tests/: test_convert.py  test_publish.py
