[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-publish-confluence"
dynamic = ["version"]
description = "Publish Obsidian Markdown notes to Confluence over Kerberos"
readme = "README.md"
requires-python = ">=3.10"
license = "WTFPL"
authors = [{ name = "Evgeny Pistun" }]
dependencies = [
  "Markdown>=3.0",
]

[project.scripts]
obsidian-publish-confluence = "obsidian_publish_confluence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
