[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-publish-confluence"
dynamic = ["version"]
description = "Publish Obsidian Markdown notes to Confluence over Kerberos"
readme = "README.md"
requires-python = ">=3.10"
license = "WTFPL"
authors = [{ name = "Evgeny Pistun" }]
dependencies = [
  "Markdown>=3.0",
]

[project.scripts]
obsidian-publish-confluence = "obsidian_publish_confluence.cli:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.13.3",
  "ty>=0.0.1a16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ty.src]
include = ["src", "tests"]
